tests/ui/impl-header-lifetime-elision/dyn-trait.stderr
error[E0521]: borrowed data escapes outside of function
  --> $DIR/dyn-trait.rs:24:5
   |
LL | fn with_dyn_debug_static<'a>(x: Box<dyn Debug + 'a>) {
   |                          --  - `x` is a reference that is only valid in the function body
   |                          |
   |                          lifetime `'a` defined here
LL |     static_val(x);
   |     ^^^^^^^^^^^^^
   |     |
   |     `x` escapes the function body here
   |     argument requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0521`.
